# glfw_learn

./: .gitignore  .gitmodules  CMakeLists.txt
include/glfw_learn/: camera.h  main.h  transform.h
include/glfw_learn/core/: engine.h  input.h  resource.h  resource_manager.h  time.h  window.h
include/glfw_learn/renderer/: gl.h  shader.h  voxel.h
include/glfw_learn/renderer/gl/: gl.h  voxel.h
resources/shaders/: voxel.frag  voxel.vert
src/: CMakeLists.txt  main.cc
src/glfw_learn/: camera.cc  main.cc  transform.cc
src/glfw_learn/core/: engine.cc  input.cc  resource.cc  resource_manager.cc  time.cc  window.cc
src/glfw_learn/renderer/: gl.cc  shader.cc  voxel.cc
src/glfw_learn/renderer/gl/: gl.cc  voxel.cc
